fix: 허브경로 마지막 원소 가져오는것 getLast() 문법으로 수정